# printctl

./: .dockerignore  Cargo.toml  README.md  justfile  shell.nix
contrib/docker/: .dockerignore  Dockerfile.alpine
contrib/docker/dev/: docker-compose.yml
contrib/docs/: book.toml
printctl/: Cargo.toml  LICENSE-APACHE  README.md  printctl.toml
printctl-node/: .gitignore  Cargo.toml  README.md  build.rs
printctl-node/proto/v0/: machine.proto  printctl.proto
printctl-node/src/: config.rs  discovery.rs  error.rs  lib.rs  mesh.rs
printctl-node/src/client/: mod.rs
printctl-node/src/server/: api.rs  config.rs  devices.rs  mod.rs  state.rs
printctl-node/src/server/devices/: mod.rs  string_decoder.rs
printctl-runner/: Cargo.toml
printctl-runner/src/: devices.rs  lib.rs  main.rs  stream.rs
printctl-ui/: Cargo.toml
printctl-ui/src/: error.rs  lib.rs
printctl-ui/src/features/: code.rs  machine.rs  metric.rs  mod.rs  motion.rs  program.rs  simulator.rs  snapshot.rs  statistics.rs  thermal.rs
printctl-ui/src/tui/: app.rs  input.rs  mod.rs  state.rs
printctl-ui/src/tui/components/: mod.rs  modal.rs  split.rs  stacked.rs
printctl-ui/src/tui/features/: code.rs  debugger.rs  editor.rs  mod.rs  program.rs  style.rs
printctl-ui/src/tui/features/editor/: code.rs  debugger.rs  mod.rs  preview.rs  script.rs  stack.rs  style.rs
printctl-ui/src/tui/features/emulation/: mod.rs  simulator.rs  stack.rs
printctl-ui/src/tui/features/simulator/: mod.rs
printctl-ui/src/web/: mod.rs
printctl/fixtures/: cube.gcode
printctl/src/: cli.rs  command.rs  config.rs  dashboard.rs  error.rs  main.rs
printctl/src/agent/: mod.rs  models.rs
printctl/src/dashboard/: mod.rs  web.rs
printctl/src/printer/: mod.rs  state.rs
printctl/src/ui/: mod.rs  tui.rs
