[package]
name = "printctl-node"
version = "0.1.0"
edition = "2024"
repository = "https://github.com/ezrasingh/printctl"
readme = "README.md"
license = "MIT OR Apache-2.0"

[dependencies]
tokio = { version = "1.44.1", features = ["macros", "rt-multi-thread"] }
simple-mdns = { version = "0.6.2", features = ["async-tokio"] }
socket2 = "0.5.8"
tonic = "0.13.0"
prost = "0.13.5"
thiserror = "2.0.12"
serde = { version = "1.0.219", features = ["derive"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
gethostname = "1.0.1"
serialport = { version = "4.7.1", features = ["serde"] }

[build-dependencies]
tonic-build = { version = "0.13.0", features = ["prost"] }
