[package]
name = "printctl"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/ezrasingh/printctl"
readme = "README.md"
license = "MIT OR Apache-2.0"

[dependencies]
printctl-node = { path = "../printctl-node", version = "*" }
tokio = { version = "1.44.1", features = ["macros", "rt-multi-thread"] }
clap = { version = "4.5.32", features = ["derive", "env", "string"] }
serde = { version = "1.0.219", features = ["derive"] }
config = "0.15.11"
thiserror = "2.0.12"
crossterm = "0.28.1"
ratatui = { version = "0.29.0", features = ["all-widgets"] }
color-eyre = "0.6.3"
tui = "0.19.0"
