[package]
name = "printctl"
version = "0.1.0"
edition = "2021"
description = "A reverse proxy for serial devices over the network, purpose-built for managing 3D printing clusters at scale."
repository = "https://github.com/ezrasingh/printctl"
readme = "README.md"
license = "MIT OR Apache-2.0"

[dependencies]
printctl-ui = { path = "../printctl-ui", version = "*" }
tokio = { version = "1.48.0", features = ["full"] }
clap = { version = "4.5.53", features = ["derive", "env", "string"] }
serde = { version = "1.0.219", features = ["derive"] }
config = "0.15.11"
thiserror = "2.0.17"
crossterm = "0.29.0"
hostname = "0.4.2"
tokio-serial = { version = "5.4.5", features = ["codec", "rt"] }
uuid = { version = "1.19.0", features = ["v4"] }
chrono = "0.4.42"
unicode-segmentation = "1.12.0"
